<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout3"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <!--match_parent(fill_parent):这个则需要计算了-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorLurquoise"
        android:text="@string/one"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/colorYellow"
        android:text="@string/two"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@color/colorFuchsia"
        android:text="@string/three"/>

</LinearLayout>
